add letter to letter mapping

--- a/Data-Transformation/data_transformation/research/mapping_places.ipynb
+++ b/Data-Transformation/data_transformation/research/mapping_places.ipynb
@@ -418,6 +418,509 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Arabic to English letter mapping\n",
+    "arabic_to_english = {\n",
+    "    \"ا\": \"A\",\n",
+    "    \"ب\": \"B\",\n",
+    "    \"ت\": \"T\",\n",
+    "    \"ث\": \"TH\",\n",
+    "    \"ج\": \"J\",\n",
+    "    \"ح\": \"H\",\n",
+    "    \"خ\": \"KH\",\n",
+    "    \"د\": \"D\",\n",
+    "    \"ذ\": \"DH\",\n",
+    "    \"ر\": \"R\",\n",
+    "    \"ز\": \"Z\",\n",
+    "    \"س\": \"S\",\n",
+    "    \"ش\": \"SH\",\n",
+    "    \"ص\": \"S\",\n",
+    "    \"ض\": \"D\",\n",
+    "    \"ط\": \"T\",\n",
+    "    \"ظ\": \"DH\",\n",
+    "    \"ع\": \"A\",\n",
+    "    \"غ\": \"GH\",\n",
+    "    \"ف\": \"F\",\n",
+    "    \"ق\": \"Q\",\n",
+    "    \"ك\": \"K\",\n",
+    "    \"ل\": \"L\",\n",
+    "    \"م\": \"M\",\n",
+    "    \"ن\": \"N\",\n",
+    "    \"ه\": \"H\",\n",
+    "    \"و\": \"W\",\n",
+    "    \"ي\": \"I\",\n",
+    "    \"ئ\": \"I\",\n",
+    "    \"ة\": \"A\",\n",
+    "    \" \": \" \",\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/hamza/miniconda3/envs/tuntrans/lib/python3.12/site-packages/pymongo/ocsp_support.py:280: CryptographyDeprecationWarning: Properties that return a naïve datetime object have been deprecated. Please switch to this_update_utc.\n",
+      "  if response.this_update > now:\n",
+      "/home/hamza/miniconda3/envs/tuntrans/lib/python3.12/site-packages/pymongo/ocsp_support.py:284: CryptographyDeprecationWarning: Properties that return a naïve datetime object have been deprecated. Please switch to next_update_utc.\n",
+      "  if response.next_update and response.next_update < now:\n",
+      "/home/hamza/miniconda3/envs/tuntrans/lib/python3.12/site-packages/pymongo/ocsp_cache.py:65: CryptographyDeprecationWarning: Properties that return a naïve datetime object have been deprecated. Please switch to next_update_utc.\n",
+      "  if value.next_update is None:\n",
+      "/home/hamza/miniconda3/envs/tuntrans/lib/python3.12/site-packages/pymongo/ocsp_cache.py:71: CryptographyDeprecationWarning: Properties that return a naïve datetime object have been deprecated. Please switch to this_update_utc.\n",
+      "  value.this_update\n",
+      "/home/hamza/miniconda3/envs/tuntrans/lib/python3.12/site-packages/pymongo/ocsp_cache.py:73: CryptographyDeprecationWarning: Properties that return a naïve datetime object have been deprecated. Please switch to next_update_utc.\n",
+      "  < value.next_update\n",
+      "/home/hamza/miniconda3/envs/tuntrans/lib/python3.12/site-packages/pymongo/ocsp_cache.py:81: CryptographyDeprecationWarning: Properties that return a naïve datetime object have been deprecated. Please switch to next_update_utc.\n",
+      "  cached_value.next_update is not None\n",
+      "/home/hamza/miniconda3/envs/tuntrans/lib/python3.12/site-packages/pymongo/ocsp_cache.py:82: CryptographyDeprecationWarning: Properties that return a naïve datetime object have been deprecated. Please switch to next_update_utc.\n",
+      "  and cached_value.next_update < value.next_update\n",
+      "/home/hamza/miniconda3/envs/tuntrans/lib/python3.12/site-packages/pymongo/ocsp_cache.py:98: CryptographyDeprecationWarning: Properties that return a naïve datetime object have been deprecated. Please switch to this_update_utc.\n",
+      "  assert value.this_update is not None\n",
+      "/home/hamza/miniconda3/envs/tuntrans/lib/python3.12/site-packages/pymongo/ocsp_cache.py:99: CryptographyDeprecationWarning: Properties that return a naïve datetime object have been deprecated. Please switch to next_update_utc.\n",
+      "  assert value.next_update is not None\n",
+      "/home/hamza/miniconda3/envs/tuntrans/lib/python3.12/site-packages/pymongo/ocsp_cache.py:101: CryptographyDeprecationWarning: Properties that return a naïve datetime object have been deprecated. Please switch to this_update_utc.\n",
+      "  value.this_update\n",
+      "/home/hamza/miniconda3/envs/tuntrans/lib/python3.12/site-packages/pymongo/ocsp_cache.py:103: CryptographyDeprecationWarning: Properties that return a naïve datetime object have been deprecated. Please switch to next_update_utc.\n",
+      "  < value.next_update\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['قفصة', 'قفصة', 'بئر الحفي', 'بئر الحفي', 'جلمة', 'جلمة', 'القيروان', 'القيروان', 'وكالة مدنين', 'وكالة مدنين', 'مساكن', 'مساكن', 'وكالة جرجيس', 'وكالة جرجيس', 'الوردانين', 'الوردانين', 'وكالة بن قردان', 'وكالة بن قردان', 'المنستير', 'المنستير', 'وكالة حومة السوق', 'وكالة حومة السوق', 'سيدي علي بن عون', 'سيدي علي بن عون', 'وكالة ميدون', 'سيدي بوزيد', 'وكالة ميدون', 'سيدي بوزيد', 'وكالة بن خداش', 'الحاجب', 'وكالة بن خداش', 'الحاجب', 'وكالة تطاوين', 'كندار', 'وكالة تطاوين', 'كندار', 'وكالة غمراسن', 'نابل', 'وكالة غمراسن', 'نابل', 'وكالة مدنين', 'بئـــر الحفي', 'وكالة مدنين', 'بئـــر الحفي', 'وكالة جرجيس', 'بوثادي', 'وكالة جرجيس', 'بوثادي', 'وكالة بن قردان', 'السواسي', 'وكالة بن قردان', 'وكالة حومة السوق', 'السواسي', 'كركر', 'وكالة حومة السوق', 'وكالة ميدون', 'كركر', 'مســــاكن', 'وكالة ميدون', 'وكالة بن خداش', 'مســــاكن', 'سوسة', 'وكالة بن خداش', 'وكالة تطاوين', 'سوسة', 'أم العرائس', 'وكالة تطاوين', 'وكالة غمراسن', 'المتلوي', 'أم العرائس', 'بلخير', 'وكالة غمراسن', 'قابس', 'المتلوي', 'منزل شاكر', 'بلخير', 'صفاقس', 'قابس', 'الرديف', 'منزل شاكر', 'السند', 'صفاقس', 'المكناسي', 'الرديف', 'المزونة', 'السند', 'بئر علي', 'المكناسي', 'نصر الله', 'المزونة', 'بئر علي', 'نصر الله']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from langdetect import detect\n",
+    "import numpy as np\n",
+    "from pymongo import MongoClient\n",
+    "import os\n",
+    "\n",
+    "\n",
+    "MONGO_URI = os.getenv(\"MONGO_URI\")\n",
+    "client = MongoClient(MONGO_URI)\n",
+    "db = client[\"Transport\"]\n",
+    "references = list(db[\"Places\"].find({\"Company\": \"Soretras\"}, {\"_id\": 0, \"Name\": 1}))\n",
+    "references = [place[\"Name\"] for place in references]\n",
+    "places = list(\n",
+    "    db[\"Places\"].find({\"Company\": {\"$in\": [\"SRTM\", \"SRTG\"]}}, {\"_id\": 0, \"Name\": 1})\n",
+    ")\n",
+    "\n",
+    "data = [place[\"Name\"] for place in places]\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "\n",
+    "def tans_ar_eng(word: str) -> str:\n",
+    "    v = \"\"\n",
+    "    new_word = re.sub(r\"[^A-Za-z]\", \"\", word)\n",
+    "    if new_word == \"\":\n",
+    "        for i in word:\n",
+    "            if i in arabic_to_english:\n",
+    "                v += arabic_to_english[i]\n",
+    "            else:\n",
+    "                v += \"<unk>\"\n",
+    "        return v\n",
+    "    return word"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new = []\n",
+    "for word in data:\n",
+    "    new_word = tans_ar_eng(word)\n",
+    "    new.append(new_word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['QFSA',\n",
+       " 'QFSA',\n",
+       " 'BIR ALHFI',\n",
+       " 'BIR ALHFI',\n",
+       " 'JLMA',\n",
+       " 'JLMA',\n",
+       " 'ALQIRWAN',\n",
+       " 'ALQIRWAN',\n",
+       " 'WKALA MDNIN',\n",
+       " 'WKALA MDNIN',\n",
+       " 'MSAKN',\n",
+       " 'MSAKN',\n",
+       " 'WKALA JRJIS',\n",
+       " 'WKALA JRJIS',\n",
+       " 'ALWRDANIN',\n",
+       " 'ALWRDANIN',\n",
+       " 'WKALA BN QRDAN',\n",
+       " 'WKALA BN QRDAN',\n",
+       " 'ALMNSTIR',\n",
+       " 'ALMNSTIR',\n",
+       " 'WKALA HWMA ALSWQ',\n",
+       " 'WKALA HWMA ALSWQ',\n",
+       " 'SIDI ALI BN AWN',\n",
+       " 'SIDI ALI BN AWN',\n",
+       " 'WKALA MIDWN',\n",
+       " 'SIDI BWZID',\n",
+       " 'WKALA MIDWN',\n",
+       " 'SIDI BWZID',\n",
+       " 'WKALA BN KHDASH',\n",
+       " 'ALHAJB',\n",
+       " 'WKALA BN KHDASH',\n",
+       " 'ALHAJB',\n",
+       " 'WKALA TTAWIN',\n",
+       " 'KNDAR',\n",
+       " 'WKALA TTAWIN',\n",
+       " 'KNDAR',\n",
+       " 'WKALA GHMRASN',\n",
+       " 'NABL',\n",
+       " 'WKALA GHMRASN',\n",
+       " 'NABL',\n",
+       " 'WKALA MDNIN',\n",
+       " 'BI<unk><unk><unk>R ALHFI',\n",
+       " 'WKALA MDNIN',\n",
+       " 'BI<unk><unk><unk>R ALHFI',\n",
+       " 'WKALA JRJIS',\n",
+       " 'BWTHADI',\n",
+       " 'WKALA JRJIS',\n",
+       " 'BWTHADI',\n",
+       " 'WKALA BN QRDAN',\n",
+       " 'ALSWASI',\n",
+       " 'WKALA BN QRDAN',\n",
+       " 'WKALA HWMA ALSWQ',\n",
+       " 'ALSWASI',\n",
+       " 'KRKR',\n",
+       " 'WKALA HWMA ALSWQ',\n",
+       " 'WKALA MIDWN',\n",
+       " 'KRKR',\n",
+       " 'MS<unk><unk><unk><unk>AKN',\n",
+       " 'WKALA MIDWN',\n",
+       " 'WKALA BN KHDASH',\n",
+       " 'MS<unk><unk><unk><unk>AKN',\n",
+       " 'SWSA',\n",
+       " 'WKALA BN KHDASH',\n",
+       " 'WKALA TTAWIN',\n",
+       " 'SWSA',\n",
+       " '<unk>M ALARAIS',\n",
+       " 'WKALA TTAWIN',\n",
+       " 'WKALA GHMRASN',\n",
+       " 'ALMTLWI',\n",
+       " '<unk>M ALARAIS',\n",
+       " 'BLKHIR',\n",
+       " 'WKALA GHMRASN',\n",
+       " 'QABS',\n",
+       " 'ALMTLWI',\n",
+       " 'MNZL SHAKR',\n",
+       " 'BLKHIR',\n",
+       " 'SFAQS',\n",
+       " 'QABS',\n",
+       " 'ALRDIF',\n",
+       " 'MNZL SHAKR',\n",
+       " 'ALSND',\n",
+       " 'SFAQS',\n",
+       " 'ALMKNASI',\n",
+       " 'ALRDIF',\n",
+       " 'ALMZWNA',\n",
+       " 'ALSND',\n",
+       " 'BIR ALI',\n",
+       " 'ALMKNASI',\n",
+       " 'NSR ALLH',\n",
+       " 'ALMZWNA',\n",
+       " 'BIR ALI',\n",
+       " 'NSR ALLH']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fuzzywuzzy import fuzz\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "\n",
+    "def group_similar_words(word_list, reference_word, threshold=80):\n",
+    "    # Create a dictionary to hold grouped words\n",
+    "    grouped_words = defaultdict(list)\n",
+    "\n",
+    "    # Calculate similarity and group words\n",
+    "    for word in word_list:\n",
+    "        similarity_score = fuzz.ratio(reference_word.lower(), word.lower())\n",
+    "        if similarity_score >= threshold:\n",
+    "            grouped_words[similarity_score].append(word)\n",
+    "\n",
+    "    return dict(grouped_words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Similarity Score: ABDELKAFI -> Words: {}\n",
+      "Similarity Score: AGUERBA -> Words: {}\n",
+      "Similarity Score: AGUEREB -> Words: {}\n",
+      "Similarity Score: AKARIT -> Words: {}\n",
+      "Similarity Score: AMRA -> Words: {}\n",
+      "Similarity Score: AOULED MSALLEM -> Words: {}\n",
+      "Similarity Score: ATYRI -> Words: {}\n",
+      "Similarity Score: BDERNA -> Words: {}\n",
+      "Similarity Score: BEN GUERDENE -> Words: {}\n",
+      "Similarity Score: BIR AKERMA -> Words: {}\n",
+      "Similarity Score: BIR ALI -> Words: {88: ['BIR ALHFI', 'BIR ALHFI'], 100: ['BIR ALI', 'BIR ALI']}\n",
+      "Similarity Score: BIR BIN AYED -> Words: {}\n",
+      "Similarity Score: BIR BRAHIM -> Words: {74: ['BIR ALHFI', 'BIR ALHFI'], 71: ['BIR ALI', 'BIR ALI']}\n",
+      "Similarity Score: BIR INDES -> Words: {}\n",
+      "Similarity Score: BIR MELOULI -> Words: {}\n",
+      "Similarity Score: BOUAKAZINE -> Words: {}\n",
+      "Similarity Score: BOULADHIEB -> Words: {}\n",
+      "Similarity Score: BOUTHADIY -> Words: {75: ['BWTHADI', 'BWTHADI']}\n",
+      "Similarity Score: CHAAL -> Words: {}\n",
+      "Similarity Score: CHEBBA -> Words: {}\n",
+      "Similarity Score: DAHMENI -> Words: {}\n",
+      "Similarity Score: DJERBA -> Words: {}\n",
+      "Similarity Score: ELHAMMA -> Words: {}\n",
+      "Similarity Score: ELJAAMAA -> Words: {}\n",
+      "Similarity Score: ELKEF -> Words: {}\n",
+      "Similarity Score: ELKSAR -> Words: {}\n",
+      "Similarity Score: ELLOUZA -> Words: {}\n",
+      "Similarity Score: ELMEZOUNA -> Words: {}\n",
+      "Similarity Score: ELMRAIA -> Words: {}\n",
+      "Similarity Score: ESGHAR -> Words: {}\n",
+      "Similarity Score: ESNED -> Words: {}\n",
+      "Similarity Score: FAYED -> Words: {}\n",
+      "Similarity Score: GABES -> Words: {}\n",
+      "Similarity Score: GAFSA -> Words: {}\n",
+      "Similarity Score: GARGOUR -> Words: {}\n",
+      "Similarity Score: GARGUOUR -> Words: {}\n",
+      "Similarity Score: GHRAIBA -> Words: {}\n",
+      "Similarity Score: HCHICHINA -> Words: {}\n",
+      "Similarity Score: JEBENIANA -> Words: {}\n",
+      "Similarity Score: KAIROUAN -> Words: {}\n",
+      "Similarity Score: KASSERINE -> Words: {}\n",
+      "Similarity Score: LAACHECH -> Words: {}\n",
+      "Similarity Score: LACHHAB -> Words: {}\n",
+      "Similarity Score: LIMAYA -> Words: {}\n",
+      "Similarity Score: LITYAM -> Words: {}\n",
+      "Similarity Score: LOUETA -> Words: {}\n",
+      "Similarity Score: MAHARES -> Words: {}\n",
+      "Similarity Score: MAHDIA -> Words: {}\n",
+      "Similarity Score: MALLOULECH -> Words: {}\n",
+      "Similarity Score: MARETH -> Words: {}\n",
+      "Similarity Score: MEDENINE -> Words: {}\n",
+      "Similarity Score: MEKNASSI -> Words: {75: ['ALMKNASI', 'ALMKNASI']}\n",
+      "Similarity Score: MENZEL BOUZAYENE -> Words: {}\n",
+      "Similarity Score: MENZEL CHEKER -> Words: {70: ['MNZL SHAKR', 'MNZL SHAKR']}\n",
+      "Similarity Score: MENZEL HACHED -> Words: {}\n",
+      "Similarity Score: METOUIA -> Words: {}\n",
+      "Similarity Score: NAKTA -> Words: {}\n",
+      "Similarity Score: OULED HAFFOUZ -> Words: {}\n",
+      "Similarity Score: OULED MSELEM -> Words: {}\n",
+      "Similarity Score: REGUEB -> Words: {}\n",
+      "Similarity Score: ROUHIA -> Words: {}\n",
+      "Similarity Score: ROUTE MENZEL CHAKER KM 17 -> Words: {}\n",
+      "Similarity Score: ROUTE MENZEL CHAKER KM 81 -> Words: {}\n",
+      "Similarity Score: SALLEMI -> Words: {}\n",
+      "Similarity Score: SBEITLA -> Words: {}\n",
+      "Similarity Score: SBIBA -> Words: {}\n",
+      "Similarity Score: SFAX -> Words: {}\n",
+      "Similarity Score: SIDI AMOR -> Words: {}\n",
+      "Similarity Score: SIDI BOUZID -> Words: {86: ['SIDI BWZID', 'SIDI BWZID']}\n",
+      "Similarity Score: SKHIRA -> Words: {}\n",
+      "Similarity Score: SOUDENE -> Words: {}\n",
+      "Similarity Score: STOUH -> Words: {}\n",
+      "Similarity Score: THEHRA -> Words: {}\n",
+      "Similarity Score: ZAAFRANA -> Words: {}\n",
+      "Similarity Score: ZARZIS -> Words: {}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example usage\n",
+    "map = {}\n",
+    "\n",
+    "for reference in references:\n",
+    "    result = group_similar_words(new, reference, threshold=70)\n",
+    "    map[reference] = result\n",
+    "\n",
+    "# Print the result\n",
+    "for ref, result in map.items():\n",
+    "    print(f\"Similarity Score: {ref} -> Words: {result}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{100: ['بئر علي'], 88: ['بئر علي 2']}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['QFSA',\n",
+       " 'QFSA',\n",
+       " 'BIR ALHFI',\n",
+       " 'BIR ALHFI',\n",
+       " 'JLMA',\n",
+       " 'JLMA',\n",
+       " 'ALQIRWAN',\n",
+       " 'ALQIRWAN',\n",
+       " 'WKALA MDNIN',\n",
+       " 'WKALA MDNIN',\n",
+       " 'MSAKN',\n",
+       " 'MSAKN',\n",
+       " 'WKALA JRJIS',\n",
+       " 'WKALA JRJIS',\n",
+       " 'ALWRDANIN',\n",
+       " 'ALWRDANIN',\n",
+       " 'WKALA BN QRDAN',\n",
+       " 'WKALA BN QRDAN',\n",
+       " 'ALMNSTIR',\n",
+       " 'ALMNSTIR',\n",
+       " 'WKALA HWMA ALSWQ',\n",
+       " 'WKALA HWMA ALSWQ',\n",
+       " 'SIDI ALI BN AWN',\n",
+       " 'SIDI ALI BN AWN',\n",
+       " 'WKALA MIDWN',\n",
+       " 'SIDI BWZID',\n",
+       " 'WKALA MIDWN',\n",
+       " 'SIDI BWZID',\n",
+       " 'WKALA BN KHDASH',\n",
+       " 'ALHAJB',\n",
+       " 'WKALA BN KHDASH',\n",
+       " 'ALHAJB',\n",
+       " 'WKALA TTAWIN',\n",
+       " 'KNDAR',\n",
+       " 'WKALA TTAWIN',\n",
+       " 'KNDAR',\n",
+       " 'WKALA GHMRASN',\n",
+       " 'NABL',\n",
+       " 'WKALA GHMRASN',\n",
+       " 'NABL',\n",
+       " 'WKALA MDNIN',\n",
+       " 'BI<unk><unk><unk>R ALHFI',\n",
+       " 'WKALA MDNIN',\n",
+       " 'BI<unk><unk><unk>R ALHFI',\n",
+       " 'WKALA JRJIS',\n",
+       " 'BWTHADI',\n",
+       " 'WKALA JRJIS',\n",
+       " 'BWTHADI',\n",
+       " 'WKALA BN QRDAN',\n",
+       " 'ALSWASI',\n",
+       " 'WKALA BN QRDAN',\n",
+       " 'WKALA HWMA ALSWQ',\n",
+       " 'ALSWASI',\n",
+       " 'KRKR',\n",
+       " 'WKALA HWMA ALSWQ',\n",
+       " 'WKALA MIDWN',\n",
+       " 'KRKR',\n",
+       " 'MS<unk><unk><unk><unk>AKN',\n",
+       " 'WKALA MIDWN',\n",
+       " 'WKALA BN KHDASH',\n",
+       " 'MS<unk><unk><unk><unk>AKN',\n",
+       " 'SWSA',\n",
+       " 'WKALA BN KHDASH',\n",
+       " 'WKALA TTAWIN',\n",
+       " 'SWSA',\n",
+       " '<unk>M ALARAIS',\n",
+       " 'WKALA TTAWIN',\n",
+       " 'WKALA GHMRASN',\n",
+       " 'ALMTLWI',\n",
+       " '<unk>M ALARAIS',\n",
+       " 'BLKHIR',\n",
+       " 'WKALA GHMRASN',\n",
+       " 'QABS',\n",
+       " 'ALMTLWI',\n",
+       " 'MNZL SHAKR',\n",
+       " 'BLKHIR',\n",
+       " 'SFAQS',\n",
+       " 'QABS',\n",
+       " 'ALRDIF',\n",
+       " 'MNZL SHAKR',\n",
+       " 'ALSND',\n",
+       " 'SFAQS',\n",
+       " 'ALMKNASI',\n",
+       " 'ALRDIF',\n",
+       " 'ALMZWNA',\n",
+       " 'ALSND',\n",
+       " 'BIR ALI',\n",
+       " 'ALMKNASI',\n",
+       " 'NSR ALLH',\n",
+       " 'ALMZWNA',\n",
+       " 'BIR ALI',\n",
+       " 'NSR ALLH']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
