fix redis logic and add nginx configfile and fix bugs in the form

--- a/Data-Transformation/data_transformation/research/mapping_places.ipynb
+++ b/Data-Transformation/data_transformation/research/mapping_places.ipynb
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -477,10 +477,6 @@
       "  value.this_update\n",
       "/home/hamza/miniconda3/envs/tuntrans/lib/python3.12/site-packages/pymongo/ocsp_cache.py:73: CryptographyDeprecationWarning: Properties that return a naïve datetime object have been deprecated. Please switch to next_update_utc.\n",
       "  < value.next_update\n",
-      "/home/hamza/miniconda3/envs/tuntrans/lib/python3.12/site-packages/pymongo/ocsp_cache.py:81: CryptographyDeprecationWarning: Properties that return a naïve datetime object have been deprecated. Please switch to next_update_utc.\n",
-      "  cached_value.next_update is not None\n",
-      "/home/hamza/miniconda3/envs/tuntrans/lib/python3.12/site-packages/pymongo/ocsp_cache.py:82: CryptographyDeprecationWarning: Properties that return a naïve datetime object have been deprecated. Please switch to next_update_utc.\n",
-      "  and cached_value.next_update < value.next_update\n",
       "/home/hamza/miniconda3/envs/tuntrans/lib/python3.12/site-packages/pymongo/ocsp_cache.py:98: CryptographyDeprecationWarning: Properties that return a naïve datetime object have been deprecated. Please switch to this_update_utc.\n",
       "  assert value.this_update is not None\n",
       "/home/hamza/miniconda3/envs/tuntrans/lib/python3.12/site-packages/pymongo/ocsp_cache.py:99: CryptographyDeprecationWarning: Properties that return a naïve datetime object have been deprecated. Please switch to next_update_utc.\n",
@@ -921,10 +917,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def jaccard_index(set_a, set_b):\n",
+    "    intersection = set_a.intersection(set_b)\n",
+    "    union = set_a.union(set_b)\n",
+    "    return len(intersection) / len(union)\n",
+    "\n",
+    "\n",
+    "def cluster_strings(strings, threshold=0.5):\n",
+    "    clusters = {}\n",
+    "    for i in range(len(strings)):\n",
+    "        for j in range(i + 1, len(strings)):\n",
+    "            string1, string2 = strings[i], strings[j]\n",
+    "            tokens1, tokens2 = set(string1.split()), set(string2.split())\n",
+    "            ji = jaccard_index(tokens1, tokens2)\n",
+    "            if ji >= threshold:\n",
+    "                clusters.setdefault(min(i, j), []).append(max(i, j))\n",
+    "    return clusters\n",
+    "\n",
+    "\n",
+    "# Example usage\n",
+    "strings = [\"hello world\", \"hello again\", \"goodbye world\", \"goodbye again\"]\n",
+    "clusters = cluster_strings(strings, threshold=0.7)\n",
+    "print(clusters)  # Output: {0: [1], 2: [3]}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "from string_grouper import StringGrouper\n",
+    "\n",
+    "\n",
+    "strings_to_group = list(db[\"Places\"].find({}, {\"_id\": 0, \"Name\": 1}))\n",
+    "\n",
+    "# Create a pandas Series from your list of strings\n",
+    "strings_series = pd.Series(strings_to_group)\n",
+    "\n",
+    "# Initialize the StringGrouper with the strings\n",
+    "string_grouper = StringGrouper(strings_series)\n",
+    "\n",
+    "# Fit the model (this calculates the cosine similarities)\n",
+    "string_grouper = string_grouper.fit()\n",
+    "\n",
+    "# Get the groups of similar strings\n",
+    "grouped_strings = string_grouper.get_groups()\n",
+    "\n",
+    "# Print the grouped strings\n",
+    "print(grouped_strings)"
+   ]
   }
  ],
  "metadata": {
